<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relLytRuneCell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <ImageView
            android:id="@+id/imgViewRuneCellRuneIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:id="@+id/txtViewRuneCellRuneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rune_name"
            android:layout_toRightOf="@+id/imgViewRuneCellRuneIcon"
            android:layout_margin="5dp"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/txtViewRuneCellRunePath"
            android:layout_toRightOf="@+id/imgViewRuneCellRuneIcon"
            android:layout_below="@+id/txtViewRuneCellRuneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rune_path"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/txtViewRuneCellRuneDesc"
            android:layout_toRightOf="@+id/imgViewRuneCellRuneIcon"
            android:layout_below="@+id/txtViewRuneCellRunePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rune_desc"
            android:layout_margin="5dp"
            android:textSize="15sp"
            />



    </RelativeLayout>


</FrameLayout>